[tool.poetry]
name = "nes-backend"
version = "0.1.0"
description = ""
authors = ["sangjinsu <climbplant39@kakao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
